--- a/web/templates/crud_users.html
+++ b/web/templates/crud_users.html
@@ -6,16 +6,21 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script>window.jQuery || document.write(decodeURIComponent('%3Cscript src="js/jquery-3.1.0.min.js"%3E%3C/script%3E'))</script>
+    <script>window.jQuery || document.write(decodeURIComponent('%3Cscript src="js/jquery-3.1.0.min.js"%3E%3C/script%3E'))</script>
     <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.7/css/dx.spa.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/17.2.7/css/dx.common.css" />
     <link rel="dx-theme" data-theme="generic.light" href="https://cdn3.devexpress.com/jslib/17.2.7/css/dx.light.css" />
     <script src="https://cdn3.devexpress.com/jslib/17.2.7/js/dx.all.js"></script>
+    <!--important(arriba)-->
     <script src="https://unpkg.com/devextreme-aspnet-data@1.3.0"></script>
     <script src="crud_users.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 <body class="dx-viewport">
+    <p>
+        <input type="button" value="volver" onclick="goback()" style="border-radius: 7px;">
+    </p>
     <div class="demo-container">
         <div id="grid"></div>
     </div>
