--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -6,24 +6,44 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="login.js"></script>
 </head>
-<body>
-
-    <table>
+<body style="background-image: linear-gradient(rgba(0,0,0,255),rgba(0,0,0,0),rgba(0,0,0,255)), url('https://wallup.net/wp-content/uploads/2017/11/10/72041-hearts-circuits-748x468.jpg'); background-size: 1370px; background-repeat: no-repeat; background-position: center center; background-attachment: fixed;">
+    <div style="padding:40px;">&nbsp</div>
+    <table align="center" style="background-color:rgb(255,255,255);border: 2px solid #C6C6C6; width:50%;">
         <tr>
-            <td>Username</td>
-            <td><input type="text" name="username" id="username"/></td>
-        </tr>
-        <tr>
-            <td>Password</td>
-            <td><input type="password" name="password" id="password" /></td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <input type="button" value="login" onclick="getData()"/>
+            <td>
+                <p align="center">
+                    <img src="/static/images/cs.png" width="35%"/>
+                </p>
             </td>
         </tr>
     </table>
+    <br>
+    <div>
+        <table align="center" style="background-color: rgb(64,116,151); border: 2px solid #194D7A; border-radius: 15px; padding:10px;">
+            <tr>
+                <td><strong>Username</strong></td>
+                <td><input type="text" name="username" id="username" style="-moz-border-radius: 13px; -webkit-border-radius: 13px; border-radius: 13px;"/></td>
+            </tr>
+            <tr>
+                <td><br><strong>Password</strong></td>
+                <td><br><input type="password" name="password" id="password" style="-moz-border-radius: 13px; -webkit-border-radius: 13px; border-radius: 13px;"/></td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <br>
+                    <input type="button" value="volver" onclick="goback()" style="border-radius: 7px;">
+                    &nbsp
+                    <input type="button" value="login" onclick="getData()" style="border-radius: 7px;"/>
+                </td>
+            </tr>
+        </table>
+        <p id="action" align="center">
+            <img id="loader" src="/static/images/loader.gif" style="display:none;" width="8%;"/>
+            <img id="success" src="/static/images/success.png" style="display:none; width: 10%;" />
+            <img id="nope"  src="/static/images/nope.png" style="display:none; width: 10%;"/>
+        </p>
+    </div>
 
-    <label id="action">Waiting for user</label>
+
 </body>
 </html>
